--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "base/contrast";
 @import "base/magnify";
+@import "base/accordion";
 @import "base/checkbox";
 @import "base/radio";
 @import "base/button";
