--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import "base/radio";
 @import "base/button";
 @import "base/textfield";
+@import "base/textarea";
 @import "common/breadcrumb";
 @import "common/accessibility";
 @import "common/header";
