--- a/src/stories/Colors/colors.scss
+++ b/src/stories/Colors/colors.scss
@@ -1,6 +1,6 @@
 $color-primary: #008660;
 $color-text-primary: #3b4043;
-$color-text-secondary: #3b4043;
+$color-text-secondary: #707f89;
 $color-icon: #98a6b5;
 $color-line: #cdd6dd;
 $color-page: #f0f3f5;
