--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -1,17 +1,41 @@
-$global-width: (
-	break-point-pc: 1100px,
-	break-point-sp: 960px,
-	break-point-iPhoneX: 375px,
-	break-point-iPhone5: 350px,
-	max-width: 1024px,
+$breakpoint: (
+	pc: 1100px,
+	sp: 960px,
+	iPhoneX: 375px,
+	iPhone5: 350px,
 );
+@function breakpoint($key) {
+	@return map-get($breakpoint, $key);
+}
 
-$global-space: (
-	content-a: 6vw,
-	content-a-sp: 12px,
+$spacing: (
+	XS: 4px,
+	S: 8px,
+	M: 16px,
+	L: 24px,
+	XL: 32px,
+	XXL: 48px,
+	XXXL: 56px,
+	XXXXL: 64px,
 );
+@function spacing($key) {
+	@return map-get($spacing, $key);
+}
 
-$global-z-index: (
+$color: (
+	primary: #008660,
+	text-primary: #3b4043,
+	text-secondary: #707f89,
+	icon: #98a6b5,
+	line: #cdd6dd,
+	page: #f0f3f5,
+	link: #0e67e1,
+);
+@function colors($key) {
+	@return map-get($color, $key);
+}
+
+$z-index: (
 	layer-5: 5000,
 	layer-4: 4000,
 	layer-3: 3000,
@@ -19,12 +43,6 @@ $global-z-index: (
 	layer-1: 1000,
 	default: 0,
 );
-
-$global-color: (
-	primary: #00aba3,
-	link: #0e67e1,
-);
-
-@function global-color($key) {
-	@return map-get($global-color, $key);
+@function z-index($key) {
+	@return map-get($z-index, $key);
 }
