--- a/src/stylesheets/common/_header.scss
+++ b/src/stylesheets/common/_header.scss
@@ -185,7 +185,7 @@
 	}
 }
 
-@media (max-width: map-get($global-width, break-point-sp)) {
+@media (max-width: breakpoint(sp)) {
 	.header {
 		width: 100%;
 		max-width: 100%;
@@ -199,7 +199,7 @@
 			padding: 0;
 			height: 68px;
 			position: fixed;
-			z-index: map-get($global-z-index, layer-4);
+			z-index: z-index(layer-4);
 			top: 0;
 			display: flex;
 			width: 100%;
@@ -210,7 +210,7 @@
 			padding: 16px;
 			background-color: #fff;
 			position: relative;
-			z-index: map-get($global-z-index, layer-4) - 20;
+			z-index: z-index(layer-4) - 20;
 			.accessibility {
 				display: none;
 			}
@@ -228,7 +228,7 @@
 			background-color: #f1f6fa;
 			overflow: scroll;
 			transition: 0.6s all ease-in-out;
-			z-index: map-get($global-z-index, layer-4) - 30;
+			z-index: z-index(layer-4) - 30;
 			transform: translateY(-150%);
 			.accessibility {
 				display: block;
@@ -276,7 +276,7 @@
 			left: 0;
 			top: 48px;
 			transition: 0.6s all ease-in-out;
-			z-index: map-get($global-z-index, layer-4) - 30;
+			z-index: z-index(layer-4) - 30;
 			background-color: #fff;
 			transform: translateY(-150%);
 		}
@@ -299,7 +299,7 @@
 			.menu-icon {
 				display: flex;
 				justify-content: center;
-				color: global-color(primary);
+				color: colors(primary);
 				font-size: 22px;
 			}
 			.menu-text {
@@ -442,7 +442,7 @@
 	}
 }
 
-@media (max-width: map-get($global-width, break-point-iPhone5)) {
+@media (max-width: breakpoint(iPhone5)) {
 	.header {
 		font-size: 14px;
 	}
