--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -13,7 +13,7 @@ body {
 	padding-bottom: 80px;
 }
 .layout-default {
-	max-width: map-get($global-width, max-width);
+	max-width: width(max);
 	padding-left: 48px;
 	padding-right: 48px;
 	margin-left: auto;
@@ -44,7 +44,7 @@ body {
 	display: none;
 }
 
-@media only screen and (max-width: map-get($global-width, break-point-sp)) {
+@media only screen and (max-width: breakpoint(sp)) {
 	.is-pc {
 		display: none;
 	}
