--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -12,6 +12,7 @@
 @import "base/textfield";
 @import "base/textarea";
 @import "common/breadcrumb";
+@import "base/tab";
 @import "common/accessibility";
 @import "common/header";
 @import "parts/life-menu";
