--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -58,6 +58,8 @@ block content
 		+Accordion({title: "government", items: accordionItems })
 		include ../components/base/Textarea.pug
 		+Textarea({id: "textarea", label: "label" })
+		include ../components/base/Search.pug
+		+Search({})
 		include ../components/base/TabList.pug
 		+TabList({ariaLabel: "ariaLabel", items: tabItems })
 			div(
