--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -13,6 +13,7 @@
 @import "base/textarea";
 @import "common/breadcrumb";
 @import "base/tab";
+@import "base/search";
 @import "common/accessibility";
 @import "common/header";
 @import "parts/life-menu";
