--- a/src/components/base/Search.pug
+++ b/src/components/base/Search.pug
@@ -5,9 +5,8 @@ mixin Search(params={})
       input(
         class="search__input"
         type="search"
-        aria-label="search text"
         size="100"
         placeholder="キーワードを入力"
       )
-      button(type="submit" value="search")
-        i(class="fas fa-search search__btn")
+      button(type="submit" value="search" class="search__btn" aria-label="検索")
+        i(class="fas fa-search")
