--- a/src/stylesheets/base/_search.scss
+++ b/src/stylesheets/base/_search.scss
@@ -24,5 +24,11 @@
 	max-height: 36px;
 	text-align: center;
 	color: #3b4043;
-	padding-right: 16px;
+	margin-right: 16px;
+	&:focus:not(:focus-visible) {
+		outline: none;
+	}
+	&:focus-visible {
+		outline: 2px solid #0000ff;
+	}
 }
