--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -15,6 +15,7 @@
 @import "base/tab";
 @import "base/search";
 @import "base/link-list";
+@import "base/link-menu";
 @import "common/accessibility";
 @import "common/header";
 @import "parts/life-menu";
