--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -35,7 +35,7 @@ body {
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
-	padding-top: 56px;
+	padding: 56px;
 }
 .is-pc {
 	display: block;
