--- a/src/components/parts/_top-menu.pug
+++ b/src/components/parts/_top-menu.pug
@@ -3,7 +3,7 @@
     {
       text: "市民の方",
       icon: "life_menu_icon_1.png",
-      link: "#"
+      link: "./citizen.html"
     },
     {
       text: "事業者の方",
@@ -20,15 +20,13 @@
       icon: "life_menu_icon_1.png",
       link: "#"
     },
-    {
-      text: "あなたの状況・ご用件を選んで探す",
-      icon: "",
-      link: "#"
-    },
   ]
+
+include ../base/LinkMenu.pug	
+include ../base/SearchLink.pug	
 
 .section-content.layout-default
   h2.section-title 
     | 見出しが入ります
-  include ../base/LinkMenu.pug	
   +LinkMenu({basePath : basePath, items: menuListItems})
+  +SearchLink({link : "../search.html"})
