--- a/src/stylesheets/parts/_new-info.scss
+++ b/src/stylesheets/parts/_new-info.scss
@@ -1,10 +1,8 @@
-.section-content-new-info {
-	background-color: #fafafa;
-}
-
 .new-info-container {
 	.section-content-body {
-		margin-top: 56px;
+		padding: 16px;
+		background-color: #fff;
+		border-radius: 8px;
 	}
 	.section-filter-title {
 		display: none;
