--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -14,6 +14,7 @@
 @import "common/breadcrumb";
 @import "base/tab";
 @import "base/search";
+@import "base/search-link";
 @import "base/link-list";
 @import "base/link-menu";
 @import "common/accessibility";
