feat: 市民ページ追加

--- a/src/components/parts/_life-menu.pug
+++ b/src/components/parts/_life-menu.pug
@@ -3,7 +3,7 @@
     {
       icon: "life_menu_icon_1.png",
       text: "妊娠から子育て",
-      link: "#"
+      link: "../citizen2.html"
     },
     {
       icon: "life_menu_icon_2.png",
