--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -14,8 +14,6 @@ body {
 }
 .layout-default {
 	max-width: width(max);
-	padding-left: 48px;
-	padding-right: 48px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -36,6 +34,11 @@ body {
 	font-weight: bold;
 	text-align: center;
 	padding: 56px;
+}
+.content-title {
+	font-size: 24px;
+	font-weight: bold;
+	padding: 8px;
 }
 .is-pc {
 	display: block;
