feat: お問い合わせバナー追加

--- a/src/components/citizen2.pug
+++ b/src/components/citizen2.pug
@@ -157,3 +157,5 @@ block content
 
   section.section-content
     .section-content-body.layout-default
+      include ../components/base/ContactBanner.pug
+      +ContactBanner({tel1: "03", tel2: "0000", tel3: "1111", dep: "健康福祉課", div: "保健所総務課", inCharge: "新型コロナウイルスワクチン"})
