--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -17,6 +17,7 @@
 @import "base/search-link";
 @import "base/link-list";
 @import "base/link-menu";
+@import "base/contact-banner";
 @import "common/accessibility";
 @import "common/header";
 @import "parts/life-menu";
