feat: 詳細ページ追加

--- a/src/components/citizen2.pug
+++ b/src/components/citizen2.pug
@@ -50,7 +50,7 @@ block pageOption
     const pregnantItems = [
       {
         text: "妊娠の届出・母子手帳の交付",
-        link: "#"
+        link: "./citizen3.html"
       },
       {
         text: "マタニティマーク",
