--- a/src/components/base/Accordion.pug
+++ b/src/components/base/Accordion.pug
@@ -9,31 +9,31 @@
     ]
   }
 mixin Accordion(params={})
-  - const props = Object.assign(params)
-  ul.accordion-list
+  - const props = Object.assign({}, params)
+  ul.accordion
     each item, index in params.items
       - let triggerId = "accordion-" + params.title + "-" + (index + 1)
       - let panelId = "accordion-panel-" + params.title + "-" + (index + 1)
-      li.accordion
+      li.accordion__list
         h3.accordion__header
           button(
             type="button"
             id=triggerId
-            class="accordion__trigger"
+            class="accordion-trigger"
             aria-expanded="false"
             aria-controls=panelId
           )
-            .accordion__header-label-container
-              span.accordion__header-label
+            .accordion-trigger__label-container
+              span.accordion-trigger__label
                 = item.label
-              .accordion__header-label-icon
+              .accordion-trigger__icon
                 i(class="fas fa-angle-down")
 
-        .accordion__panel(
+        .accordion-panel(
           id=panelId
           role="region"
           aria-hidden="true"
           aria-labelledby=triggerId
         )
-          p.accordion__panel-text
+          p.accordion-panel__text
             = item.content
