--- a/src/stylesheets/base/_accordion.scss
+++ b/src/stylesheets/base/_accordion.scss
@@ -1,8 +1,9 @@
 .accordion {
-	width: 400px;
-	max-width: 1024px;
-	margin: 0 auto;
-
+	&__list {
+		width: 400px;
+		max-width: 1024px;
+		margin: 0 auto;
+	}
 	&__header {
 		background-color: #fff;
 		color: #3b4043;
@@ -11,51 +12,47 @@
 			opacity: 0.8;
 		}
 	}
-
-	&__trigger {
-		position: relative;
-		padding: 16px;
-		width: 100%;
-		border: 1px solid #cdd6dd;
-		&:focus:not(:focus-visible) {
-			outline: none;
-		}
-		&:focus-visible {
-			outline: 2px solid #0000ff;
-		}
-		&[aria-expanded="true"] {
-			.accordion__header-label-icon {
-				transform: rotate(180deg);
-			}
+}
+.accordion-trigger {
+	position: relative;
+	padding: 16px;
+	width: 100%;
+	border: 1px solid #cdd6dd;
+	&:focus:not(:focus-visible) {
+		outline: none;
+	}
+	&:focus-visible {
+		outline: 2px solid #0000ff;
+	}
+	&[aria-expanded="true"] {
+		.accordion-trigger__icon {
+			transform: rotate(180deg);
 		}
 	}
-
-	&__header-label-container {
+	&__label-container {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 	}
-
-	&__panel {
-		height: auto;
-		border: 1px solid #ccc;
-		border-top: none;
-		padding: 15px;
-		&[aria-hidden="true"] {
-			visibility: hidden;
-			line-height: 0;
-			opacity: 0;
-			padding: 0;
-			border: none;
-		}
-		&[aria-hidden="false"] {
-			.accordion__panel-text {
-				transition: 0.3s;
-			}
+}
+.accordion-panel {
+	height: auto;
+	border: 1px solid #ccc;
+	border-top: none;
+	padding: 15px;
+	&[aria-hidden="true"] {
+		visibility: hidden;
+		line-height: 0;
+		opacity: 0;
+		padding: 0;
+		border: none;
+	}
+	&[aria-hidden="false"] {
+		.accordion-panel__text {
+			transition: 0.3s;
 		}
 	}
-
-	&__panel-text {
+	&__text {
 		overflow-wrap: break-word;
 	}
 }
