--- a/src/components/search.pug
+++ b/src/components/search.pug
@@ -43,5 +43,4 @@ block content
 			.section-content.layout-default
 				.search-btn-wrapper
 					include ../components/base/Button.pug
-					+Button({type: "submit"})
-						| 検索する
+					+Button({type: "submit", label: "検索する"})
