--- a/src/stylesheets/base/_button.scss
+++ b/src/stylesheets/base/_button.scss
@@ -1,13 +1,20 @@
 .btn {
+	@extend .box-shadow;
 	padding: 12px 48px;
 	border-radius: 50px;
 	font-weight: bold;
 	font-size: 24px;
-}
-
-.btn-primary {
-	@extend .btn;
-	@extend .box-shadow;
-	background-color: #008660;
-	color: #fff;
+	&:hover {
+		opacity: 0.8;
+	}
+	&--primary {
+		@extend .btn;
+		background-color: colors(primary);
+		color: #fff;
+	}
+	&--secondary {
+		@extend .btn;
+		background-color: #fff;
+		color: colors(primary);
+	}
 }
