--- a/src/stylesheets/base/_checkbox.scss
+++ b/src/stylesheets/base/_checkbox.scss
@@ -8,7 +8,7 @@ $checkbox-border-color: #ccc;
 	padding: 16px 0 16px 32px;
 	border-radius: 6px;
 
-	.checkbox__input {
+	&__input {
 		clip: rect(0 0 0 0);
 		clip-path: inset(50%);
 		height: 1px;
@@ -33,7 +33,7 @@ $checkbox-border-color: #ccc;
 			transform: translateY(-50%) scale(1);
 		}
 	}
-	.checkbox__label {
+	&__label {
 		position: relative;
 		margin-bottom: 0;
 		vertical-align: middle;
