--- a/src/components/base/LinkList.pug
+++ b/src/components/base/LinkList.pug
@@ -9,11 +9,11 @@
   }
 mixin LinkList(params={})
   - const props = Object.assign(params)
-  .list__container
-    ul.list 
+  .link-list__container
+    ul.link-list 
       each item in props.items
-        li.list__item 
-          a.list__item-link(href=item.link)
-            span.list__item-text
+        li.link-list-item 
+          a.link-list-item__link(href=item.link)
+            span.link-list-item__text
               = item.text
-            i(class="fas fa-arrow-right list__item-icon")
+            i(class="fas fa-arrow-right link-list-item__icon")
