--- a/src/stylesheets/base/_link-list.scss
+++ b/src/stylesheets/base/_link-list.scss
@@ -1,17 +1,17 @@
-.list__item {
+.link-list-item {
 	background-color: #fff;
 	width: 100%;
 	border-bottom: 1px solid #cdd6dd;
-	&-link {
+	&__link {
 		display: flex;
 		align-items: center;
 		padding: 16px;
 	}
-	&-text {
+	&__text {
 		flex: 1;
 		padding-right: 16px;
 	}
-	&-icon {
+	&__icon {
 		color: #98a6b5;
 	}
 }
