--- a/src/components/base/LinkMenu.pug
+++ b/src/components/base/LinkMenu.pug
@@ -2,16 +2,16 @@ mixin LinkMenu(params={})
   - const props = Object.assign({}, params)
   ul.link-menu-list
     each item in props.items
-      li.link-menu-item.box-shadow 
+      li.link-menu-item
         a(href=item.link) 
           .link-menu-item__container
             if item.icon
               img(
                 src=props.basePath + item.icon
                 alt=""
-                class="link-menu-item-icon"
+                class="link-menu-item__icon"
               )
-            .link-menu-item-text__container
-              span.link-menu-item-text
+            .link-menu-item__text-container
+              span.link-menu-item__text
                 = item.text
               i(class="fas fa-chevron-circle-right")
