--- a/src/stylesheets/base/_checkbox.scss
+++ b/src/stylesheets/base/_checkbox.scss
@@ -25,12 +25,14 @@ $checkbox-border-color: #ccc;
 			border-color: $checkbox-border-color;
 			background-color: $checkbox-bg;
 		}
-		&:focus + .checkbox__label::before {
-			box-shadow: 0 0 0 4px rgba(blue, 0.4);
-			border: 2px solid blue;
-		}
 		&:checked + .checkbox__label::after {
 			transform: translateY(-50%) scale(1);
+		}
+		&:focus:not(:focus-visible) + .checkbox__label::before {
+			outline: none;
+		}
+		&:focus-visible + .checkbox__label::before {
+			outline: 2px solid #0000ff;
 		}
 	}
 	&__label {
