--- a/src/components/base/SearchLink.pug
+++ b/src/components/base/SearchLink.pug
@@ -1,8 +1,8 @@
 mixin SearchLink(params={})
   - const props = Object.assign({}, params)
-    .search-link.box-shadow
+    .search-link
       a(href=props.link) 
-        .search-link-text__container
-          span.search-link-text
+        .search-link__text-container
+          span.search-link__text
             | あなたの状況・ご用件を選んで探す
           i(class="fas fa-chevron-circle-right")
