--- a/src/stylesheets/base/_search.scss
+++ b/src/stylesheets/base/_search.scss
@@ -1,4 +1,4 @@
-.search__container {
+.search {
 	display: flex;
 	justify-content: space-between;
 	position: relative;
@@ -8,27 +8,28 @@
 	overflow: hidden;
 	align-items: center;
 	background-color: #fff;
-}
-.search__input {
-	padding: 16px;
-}
-.search__btn {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 36px;
-	min-width: 36px;
-	max-width: 36px;
-	height: 36px;
-	min-height: 36px;
-	max-height: 36px;
-	text-align: center;
-	color: #3b4043;
-	margin-right: 16px;
-	&:focus:not(:focus-visible) {
-		outline: none;
+
+	&__input {
+		padding: 16px;
 	}
-	&:focus-visible {
-		outline: 2px solid #0000ff;
+	&__btn {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 36px;
+		min-width: 36px;
+		max-width: 36px;
+		height: 36px;
+		min-height: 36px;
+		max-height: 36px;
+		text-align: center;
+		color: #3b4043;
+		margin-right: 16px;
+		&:focus:not(:focus-visible) {
+			outline: none;
+		}
+		&:focus-visible {
+			outline: 2px solid #0000ff;
+		}
 	}
 }
