--- a/src/stylesheets/base/_textarea.scss
+++ b/src/stylesheets/base/_textarea.scss
@@ -1,9 +1,9 @@
-.textarea__container {
+.textarea {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
 
-	.textarea__input {
+	&__input {
 		resize: none;
 		border: 1px solid #cdd6dd;
 		background-color: #fff;
@@ -16,7 +16,7 @@
 			border: 1px solid #008660;
 		}
 	}
-	.textarea__label {
+	&__label {
 		font-size: 12px;
 		color: #707070;
 	}
