--- a/src/components/base/Textfield.pug
+++ b/src/components/base/Textfield.pug
@@ -1,6 +1,6 @@
 mixin Textfield(params={})
   - const props = Object.assign({placeholder: ""}, params)
-  .textfield__container
+  .textfield
     label(
       for=props.id
       class="textfield__label"
