--- a/src/stylesheets/base/_textfield.scss
+++ b/src/stylesheets/base/_textfield.scss
@@ -1,9 +1,9 @@
-.textfield__container {
+.textfield {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
 
-	.textfield__input {
+	&__input {
 		border: 1px solid #cdd6dd;
 		background-color: #fff;
 		width: 340px;
@@ -15,7 +15,7 @@
 			border: 1px solid #008660;
 		}
 	}
-	.textfield__label {
+	&__label {
 		font-size: 12px;
 		color: #707070;
 	}
